# Django

./: README.md  fake_db.py  manage.py  pyproject.toml
config/: settings.py  urls.py
templates/: user_list.html
