[project]
name = "django-assginment"
version = "0.1.0"
description = ""
authors = [
    {name = "장태문",email = "rhffkfk@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
